<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhotoDisplay">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="352dp"
        android:layout_height="305dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="308dp"
        android:layout_x="24dp"
        android:layout_y="50dp"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="219dp"
        android:layout_x="265dp"
        android:layout_y="455dp"
        android:onClick="slideshow"
        android:text="@string/slideshow"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="163dp"
        android:layout_x="289dp"
        android:layout_y="364dp"
        android:onClick="move"
        android:text="@string/move"
        android:textSize="16sp" />

    <Button
        android:id="@+id/addtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginTop="579dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="104dp"
        android:layout_x="286dp"
        android:layout_y="410dp"
        android:onClick="addtag"
        android:text="@string/add_tag"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="194dp"
        android:layout_height="155dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="133dp"
        android:layout_x="24dp"
        android:layout_y="376dp"
        android:text="@string/caption"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="261dp"
        android:layout_y="499dp"
        android:onClick="deleteTag"
        android:text="@string/delete_tag"
        android:textSize="16sp" />

</AbsoluteLayout>